--- a/01_flask_intro/src/templates/index.html
+++ b/01_flask_intro/src/templates/index.html
@@ -6,5 +6,27 @@
   <body>
     <h1>Hello</h1>
     <p>some stuff</p>
+    <form id="login-form">
+      Login: <input type="text" id="user-login" />
+      <input type="submit" />
+    </form>
   </body>
+  <script>
+const loginForm = document.querySelector('#login-form')
+const loginTxt = document.querySelector('#user-login')
+loginForm.addEventListener('submit', (event) => {
+  event.preventDefault();
+  fetch('/login', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({
+      "username": loginTxt.value
+    })
+  })
+  .then(resp => resp.json())
+  .then(data => console.log(data))
+})
+  </script>
 </html>
