--- a/01_flask_intro/src/templates/index.html
+++ b/01_flask_intro/src/templates/index.html
@@ -6,5 +6,31 @@
   <body>
     <h1>Hello</h1>
     <p>some stuff</p>
+    <form id="login-form">
+      Login: <input type="text" id="login" />
+      <input type="submit" />
+    </form>
   </body>
+  <script defer>
+    const loginForm = document.querySelector('#login-form')
+    console.log(loginForm)
+    const loginTxt = document.querySelector('#login')
+    loginForm.addEventListener('submit', (event) => {
+      event.preventDefault()
+      console.log(loginTxt.value)
+      fetch('https://localhost:5555/login', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+          "username": loginTxt.value
+        })
+      })
+      .then(resp => resp.json())
+      .then(data => {
+        console.log(data)
+      })
+    })
+        </script>
 </html>
