--- a/01_flask_intro/src/templates/signup.html
+++ b/01_flask_intro/src/templates/signup.html
@@ -4,23 +4,22 @@
     <title>My App</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <p>Logged in as: {{ username }}</p>
-    <form id="login-form">
+    <h1>Sign Up</h1>
+    <form id="signup-form">
       Login: <input type="text" id="login" />
       Password: <input type="password" id="password" />
       <input type="submit" />
     </form>
   </body>
   <script defer>
-    const loginForm = document.querySelector('#login-form')
+    const loginForm = document.querySelector('#signup-form')
     const loginTxt = document.querySelector('#login')
     const loginPass = document.querySelector('#password')
 
     loginForm.addEventListener('submit', (event) => {
       event.preventDefault()
       console.log(loginTxt.value)
-      fetch('http://localhost:5555/login', {
+      fetch('https://localhost:5555/signup', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
@@ -35,5 +34,5 @@
         console.log(data)
       })
     })
-        </script>
+  </script>
 </html>
